fix(ui5-panel): correct inon size on small screens (#213)
The icon used to shrink.on small screen, now it has min width and height.
Fixes: https://github.com/SAP/ui5-webcomponents/issues/212

--- a/packages/main/src/themes/base/Panel.less
+++ b/packages/main/src/themes/base/Panel.less
@@ -34,6 +34,8 @@ ui5-panel {
 	& ui5-icon.sapMPanelIcon {
 		width: 1.5rem;
 		height: 1.5rem;
+		min-width: 1.5rem;
+		min-height: 1.5rem;
 		margin-left: 0.75rem;
 		margin-right: 0.75rem;
 		align-self: center;
